--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,13 @@
     "phosphor-react": "^1.4.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.17.12",
     "@swc/core": "^1.2.178",
     "@swc/jest": "^0.2.20",
     "@tailwindcss/forms": "^0.5.1",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.5.0",
+    "@types/jest": "^27.5.1",
     "@types/node": "^17.0.31",
     "@types/nodemailer": "^6.4.4",
     "jest": "^28.1.0",
